<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnIdentify"
        android:layout_width="235dp"
        android:layout_height="68dp"
        android:onClick="carMakeIdentifier"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="386dp"
        android:text="@string/identify_the_car_make" />

    <Button
        android:id="@+id/btnHint"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:onClick="hintCar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginBottom="301dp"
        android:text="@string/hints" />

    <Button
        android:id="@+id/btnIdentifyImg"
        android:layout_width="237dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginBottom="208dp"
        android:text="@string/identify_the_car_image" />

    <Button
        android:id="@+id/btnAdvanced"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginBottom="117dp"
        android:text="@string/advanced_level" />
</RelativeLayout>